--- a/3_第三章.md
+++ b/3_第三章.md
@@ -8,6 +8,6 @@
 极大似然法是让每个样本属于其真实标记的概率越大越好，因此我们要最大化对数似然$l(w,b)=\sum_{i=1}^mlnp(y_i|x_i;w,b)$。化简后可得到一个关于$w$和$b$的凸函数，利用梯度下降法和牛顿法等都可求得最优解。  
 代码见3_3.py，此处是用数值解来求导数，一般还是推导一下较好。
 # 3.4
-
 # 3.5
+线性判别分析，可以看作一种降维的方式。在维数过多，维与维之间依赖性很强的情况下可以使用。它将数据降成一维，并尽力保证维与维之间离得尽可能远，相同维内的样本离得尽可能近。  
 
